<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable
                name="constant"
                type="com.companion.android.AppConstantsKt"/>
        <variable
                name="model"
                type="com.companion.android.AuthenticationViewModel"/>
        <variable
                name="onClick"
                type="com.companion.android.SignUpFragment.OnFragmentInteractionListener"/>
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SignUpFragment"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
        
        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/fragment_sign_up_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.17"/>
        
        <TextView
                android:id="@+id/fragment_sign_up_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="35sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_guideline"
        android:transitionName="@string/title_transition"/>
        
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_sign_up_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/colorSecondaryLight"
                app:startIconDrawable="@drawable/ic_email_24px"
                app:startIconTint="@color/colorSecondary"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_guideline"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_name_layout">
            
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_sign_up_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:hint="@string/email"
                    android:textColorHint="@color/hint_color"
                    android:text="@={model.email}"/>
        
        </com.google.android.material.textfield.TextInputLayout>
        
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_sign_up_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/colorSecondaryLight"
                app:startIconDrawable="@drawable/ic_person_24px"
                app:startIconTint="@color/colorSecondary"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_email_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_password_layout">
            
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_sign_up_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:hint="@string/name"
                    android:textColorHint="@color/hint_color"
                    android:text="@={model.name}"/>
        
        </com.google.android.material.textfield.TextInputLayout>
        
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_sign_up_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusTopStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/black"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/colorSecondaryLight"
                app:startIconDrawable="@drawable/ic_lock_24px"
                app:startIconTint="@color/colorSecondary"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_name_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_button">
            
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_sign_up_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:hint="@string/password"
                    android:textColorHint="@color/hint_color"
                    android:text="@={model.password}"/>
        
        </com.google.android.material.textfield.TextInputLayout>
        
        <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/fragment_sign_up_password_require_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_check_circle_24px"
                app:drawableTint="@color/white"
                android:text="@string/password_require_count"
                android:layout_marginStart="16dp"
                android:gravity="start|center"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_password_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_password_require_uppercase_letters"/>
        
        <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/fragment_sign_up_password_require_uppercase_letters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_check_circle_24px"
                app:drawableTint="@color/white"
                android:text="@string/password_require_uppercase_letters"
                android:layout_marginStart="16dp"
                android:gravity="start|center"
                app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_password_require_count"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_password_require_lowercase_letters"/>
        
        <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/fragment_sign_up_password_require_lowercase_letters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_check_circle_24px"
                app:drawableTint="@color/white"
                android:text="@string/password_require_lowercase_letters"
                android:layout_marginStart="16dp"
                android:gravity="start|center"
                app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_password_require_uppercase_letters"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_password_require_numbers"/>
        
        <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/fragment_sign_up_password_require_numbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_check_circle_24px"
                app:drawableTint="@color/white"
                android:text="@string/password_require_numbers"
                android:layout_marginStart="16dp"
                android:gravity="start|center"
                app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_password_require_lowercase_letters"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_password_require_special_character"/>
        
        <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/fragment_sign_up_password_require_special_character"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_check_circle_24px"
                app:drawableTint="@color/white"
                android:text="@string/password_require_special_character"
                android:layout_marginStart="16dp"
                android:gravity="start|center"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_password_require_numbers"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_button"/>
        
        <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorSecondary"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:cornerRadius="8dp"
                android:textSize="@dimen/button_text_size"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_password_layout"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fragment_sign_up_log_in_button"
                android:onClick="@{() -> onClick.onClickLogIn(constant.CODE_SIGN_UP)}"/>
        
        <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_sign_up_log_in_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_log_in"
                android:textSize="@dimen/button_underline_text_size"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:onClick="@{() -> onClick.onClickLogIn(constant.CODE_SIGN_UP_TO_LOG_IN)}"/>
    
    </androidx.constraintlayout.widget.ConstraintLayout>
    
</layout>