<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ForgotPasswordEmailFragment"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
    
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_forgot_password_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.13"/>
    
    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_forgot_password_email_header"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_lock_24px"
            android:scaleType="fitCenter"
            app:tint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/fragment_forgot_password_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_forgot_password_email_title"/>
    
    <TextView
            android:id="@+id/fragment_forgot_password_email_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/fragment_forgot_password_email_header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_forgot_password_email_label"/>
    
    <TextView
            android:id="@+id/fragment_forgot_password_email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_email"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_forgot_password_email_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_forgot_password_email_layout"/>
    
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_forgot_password_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/colorSecondaryDark"
            app:startIconDrawable="@drawable/ic_email_24px"
            app:startIconTint="@color/colorPrimary"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_forgot_password_email_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_forgot_password_email_continue_button">
        
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_forgot_password_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:hint="@string/email"
                android:textColorHint="@color/colorSecondaryLight"/>
    
    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_forgot_password_email_continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_continue"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorSecondaryDark"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="8dp"
            android:textSize="16sp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_forgot_password_email_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    
    <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_forgot_password_email_sign_up_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account_sign_up"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"/>
    
    <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/fragment_forgot_password_email_back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_left_24px"
            android:scaleType="fitCenter"
            android:tint="@color/white"
            android:background="@color/transparent"
            android:layout_marginTop="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>