<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EmailVerificationFragment"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
    
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_email_verification_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.09"/>
    
    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/fragment_email_verification_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_lock_24px"
            android:scaleType="fitCenter"
            app:tint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/fragment_email_verification_guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_email_verification_title"/>
    
    <TextView
            android:id="@+id/fragment_email_verification_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_verification"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/transparent"
            app:layout_constraintTop_toBottomOf="@id/fragment_email_verification_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_email_verification_label"/>
    
    <TextView
            android:id="@+id/fragment_email_verification_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_verification_label"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_email_verification_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_email_verification"/>
    
    <com.companion.android.PinEntryEditText
            android:id="@+id/fragment_email_verification"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="number"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:maxLength="6"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/fragment_email_verification_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_email_verification_verify_button"/>
    
    <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_email_verification_verify_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorSecondary"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:cornerRadius="8dp"
            android:textSize="@dimen/button_text_size"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_email_verification"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    
    <com.google.android.material.button.MaterialButton
            android:id="@+id/fragment_email_verification_sign_up_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account_sign_up"
            android:textSize="@dimen/button_underline_text_size"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>